@@ -1,9 +1,10 @@
 Package: netbenchmark
 Type: Package
 Title: Benchmarking of several gene network inference methods
-Version: 0.99.1
+Version: 0.99.3
 Date: 2014-03-11
-Author: Pau Bellot, Catharina Olsen, Patrick Meyer
+Author: Pau Bellot, Catharina Olsen, Patrick Meyer, 
+    with contributions from Alexandre Irrthum
 Maintainer: Pau Bellot <pau.bellot@upc.edu>
 Contact: Pau Bellot <pau.bellot@upc.edu>, 
     Patrick Meyer <Patrick.Meyer@ulg.ac.be>
@@ -14,7 +15,7 @@ URL: http://biosys.geek-lab.org/
 Imports: Rcpp (>= 0.11.0), minet, randomForest, c3net, 
     PCIT, GeneNet, tools, pracma
 LinkingTo: Rcpp
-Depends: grndata
+Depends: grndata (>= 0.99.2)
 Suggests: RUnit, BiocGenerics, knitr
 biocViews: Microarray, GraphAndNetwork, Network, NetworkInference, 
     GeneExpression
