@@ -12,14 +12,14 @@ vignette: >
 In the last decade, several methods have tackled the challenge of 
 reconstructing gene regulatory networks from gene expression data. 
 Several papers have compared and evaluated the different network inference 
-methods relying on a simulated data.
+methods relying on simulated data.
 
-This is new comparison that assesses different methods in a high-heterogeneity 
-data scenario which could reveal the specialization of methods for the 
-different network types and data. 
+This is a new comparison that assesses different methods in a 
+high-heterogeneity data scenario which could reveal the specialization 
+of methods for the different network types and data.
 
-This package characterizes the performance, data requirements and noise 
-robustness of gene regulatory networks inference methods.  
+This package allows repeating the comparison between different network
+inference algorithms with only one line of code.
 
 This package allows replication this comparison between the different 
 networks inference algorithms with only one line of code. 
@@ -31,8 +31,8 @@ Toy example for main benchmark:
                                local.noise=20,global.noise=10,
                                noiseType=c("normal","lognormal"),
                                datasets.num = 2,experiments = 40,
-                               seed=1422976420)
-   
+                               seed=1422976420,verbose=FALSE)
+
 ```
 The first element of the returned list is the $AUPR_{20}$:
 ```{r print}
@@ -50,23 +50,23 @@ First, define the wrapper functions:
 
     Pearsoncor <- function(data){
         cor(data,method="pearson")
-    }
+   }
 ```
 
 Note that the wrapper function returns a matrix which is the weighted 
-adjacency matrix of the network inferred by the algorithm and that their 
+adjacency matrix of the network inferred by the algorithm and that the
 columns and rows are named.
 
 Evaluate five times these two simple inference methods with syntren300 
 datasource:
 ```{r evaluate_grn}
     res <- netbenchmark(datasources.names="syntren300",
-        methods=c("Spearmancor","Pearsoncor"))
+        methods=c("Spearmancor","Pearsoncor"),verbose=FALSE)
     aupr <- res[[1]][,-(1:2)]
 ```
-Make a boxplot the $AUPR_{20}$ results:
+Make a boxplot of the $AUPR_{20}$ results:
 ```{r fig.width=7, fig.height=6}
-    boxplot(aupr, main="Syntren300")
+    boxplot(aupr, main="Syntren300",ylab=expression('AUPR'[20]))
 ```
 
 Plot the mean Precision-Recall curves:
@@ -84,7 +84,7 @@ We can also compare these two simple inference methods with the fast network
 inference algorithms using syntren300 datasource:
 ```{r compare_grn}
     comp <- netbenchmark(datasources.names="syntren300",
-        methods=c("all.fast","Spearmancor","Pearsoncor"))
+        methods=c("all.fast","Spearmancor","Pearsoncor"),verbose=FALSE)
     aupr <- comp[[1]][,-(1:2)]
 ```
 
@@ -93,5 +93,5 @@ Make a boxplot the $AUPR_{20}$ results:
     #make the name look prety
     library("tools")
     colnames(aupr) <- sapply(colnames(aupr),file_path_sans_ext)
-    boxplot(aupr, main="Syntren300")
+    boxplot(aupr, main="Syntren300", ylab=expression('AUPR'[20]))
 ```
