@@ -3,4 +3,6 @@ grndata_0.99.0
 grndata_0.99.1
       - Adding function to easily load a datasource
 grndata_0.99.2
-      - Adding toy datasources Ecoli10 and Yeast10
+      - Adding toy datasource
+grndata_0.99.3
+      - Adding Availabledata variable
